--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,19 +5,19 @@
             <div class="col-md-8">
                 <ul class="list-inline">
                     <li>
-                        <a href="#home">Home</a>
+                        <a href="#home">Główna</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#about">About</a>
+                        <a href="#informacje">Informacje Dodatkowe</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="#cennik">Cennik</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a href="#mapa">Mapa</a>
                     </li>
                 </ul>
                 <p class="copyright text-muted small">{{ site.copyright }}</p>
