--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,13 +15,13 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">  
             	<li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="#info">Informacje Dodatkowe</a>
                 </li>            
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="#prices">Cennik</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="#map">Mapa</a>
                 </li>
             </ul>
         </div>
@@ -41,6 +41,7 @@
 					<div class="intro-message">
 						<h1>{{ page.title }}</h1>
 						<h3>{{ page.subTitle }}</h3>
+                        <h2>{{ page.subTitle2 }}</h2>
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
 							{% for social in site.social %}
