--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -1,4 +1,4 @@
-<section id="services">
+<section id="prices">
 <!-- Page Content -->
 {% for post in site.posts reversed %}
   {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
@@ -8,14 +8,15 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-5 col-sm-6">
+                <div class="col-lg-8 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">{{ post.title }}</h2>
                     <div class="lead">{{ post.content }}</div>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/services/{{ post.img }}" alt="">
+                <div class="col-lg-2 col-lg-offset-2 col-sm-6">
+                    {% include advertisements.html %}
+                    g
                 </div>
             </div>
 
