--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
 
 	<body>
 		{% include header.html %}
-		{% include about.html %}
+		{% include info.html %}
 		{% include page_content.html %}
-		{% include contact.html %}
+		{% include map.html %}
 		{% include footer.html %}
 		{% include js.html %}
 	</body>
