--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,15 +9,15 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#informacje">Informacje Dodatkowe</a>
+                        <a href="#info">Informacje Dodatkowe</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#cennik">Cennik</a>
+                        <a href="#prices">Cennik</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#mapa">Mapa</a>
+                        <a href="#map">Mapa</a>
                     </li>
                 </ul>
                 <p class="copyright text-muted small">{{ site.copyright }}</p>
