--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">  
+           	<li>
+                    <a class="page-scroll" href="#home">Główna</a>
+                </li>
             	<li>
                     <a class="page-scroll" href="#info">Informacje Dodatkowe</a>
                 </li>            
